# micrograd

./: Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: devops.yml
notebooks/: micrograd.ipynb
src/: engine.py  nn.py
test/: test_engine.py
